spinnaker-kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  annotations:
#    cert-manager.io/cluster-issuer: cloudflare-issuer
  name: spinnaker-ingress
  namespace: spinnaker
spec:
#  ingressClassName: nginx
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              service:
                name: deck
                port:
                  number: 9000
            path: /
            pathType: Prefix
          - backend:
              service:
                name: gate
                port:
                  number: 8084
            path: /api/v1/
            pathType: Prefix
#  tls:
#    - hosts:
#        - example.com
#      secretName: spinnaker-ingress-cert
